--- a/client/main.css
+++ b/client/main.css
@@ -12,6 +12,14 @@
     padding: .50rem!important;
 }
 
+.overlay {
+    background-clip: border-box!important;
+    border: 1px solid rgba(0,0,0,.125)!important;
+    border-radius: .25rem!important;
+    padding: .50rem!important;
+    background-color: rgba(161,222,0,.25)!important;
+}
+
 .make-center {
   display: flex;
   align-items: center;
