--- a/client/main.css
+++ b/client/main.css
@@ -18,6 +18,14 @@
     border-radius: .25rem!important;
     padding: .50rem!important;
     background-color: rgba(161,222,0,.25)!important;
+
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
 }
 
 .make-center {
